Moved test yaml files into /test

--- a/tests/test_case_sensitive.yaml
+++ b/tests/test_case_sensitive.yaml
@@ -1,10 +1,11 @@
 vaults:
   test:
     name: test
-    path: /tmp/test-weekday
+    path: /tmp/test-case-sensitive
     locale: en_US.UTF-8
     phrases: {}
     section_name: null
     date_format: null
     template_file: null
-    file_path_format: "daily/{weekday}/{year}-{month:02}-{date:02}.md"
+    file_path_format: "test_{Weekday}_{weekday}_{Weekday_short}_{weekday_short}.md"
+
