--- a/tests/test_weekday_debug.yaml
+++ b/tests/test_weekday_debug.yaml
@@ -1,10 +1,11 @@
 vaults:
   test:
     name: test
-    path: /tmp/test-custom-path
+    path: /tmp/test-weekday-debug
     locale: en_US.UTF-8
     phrases: {}
     section_name: null
     date_format: null
     template_file: null
-    file_path_format: "work/{year}/{month:02}/{date:02}.md"
+    file_path_format: "test_{weekday}_{weekday_short}.md"
+
