--- a/tests/test_custom_path.yaml
+++ b/tests/test_custom_path.yaml
@@ -1,10 +1,11 @@
 vaults:
   test:
     name: test
-    path: /tmp/test-case-sensitive
+    path: /tmp/test-custom-path
     locale: en_US.UTF-8
     phrases: {}
     section_name: null
     date_format: null
     template_file: null
-    file_path_format: "test_{Weekday}_{weekday}_{Weekday_short}_{weekday_short}.md"
+    file_path_format: "work/{year}/{month:02}/{date:02}.md"
+
