--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ path = "src/lib.rs"
 name = "journey"
 path = "src/main.rs"
 
+[[bin]]
+name = "journeyctl"
+path = "src/journeyctl/main.rs"
+
 [dependencies]
 clap = { version = "4.4", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
