--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,22 @@
 name = "journey-cli"
 version = "0.9.9"
 edition = "2021"
+authors = ["Leif Jantzen <leif@jantzen.no>"]
+description = "A CLI-based journal application with automatic timestamping, vault management, and Obsidian integration"
+license = "MIT"
+repository = "https://github.com/ljantzen/journey"
+homepage = "https://github.com/ljantzen/journey"
+documentation = "https://github.com/ljantzen/journey/blob/main/README.md"
+readme = "README.md"
+keywords = ["journal", "cli", "note-taking", "markdown", "obsidian"]
+categories = ["command-line-utilities", "text-processing"]
+exclude = [
+    ".cursor/",
+    ".cursorrules",
+    ".github/",
+    "docs/TEST_*.md",
+    "target/",
+]
 
 [lib]
 name = "journey"
